# rednode-engagment-farmer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CrossFit训练.sh  README.md  crossfit.sh  fitnessgirl.sh  func-training-cn.sh  pyproject.toml  requirements.txt  run.sh  setup.py  strength-training-cn.sh
.xhs_bot/: keyword_popularity.json
engagebot/: __init__.py  cli.py  config.py  controller.py  domain.py  logging_setup.py  scheduler.py  strategy.py
engagebot/adapters/: __init__.py  base.py  mock.py  xhs.py
example_data/: posts.json  users.json
models/: comments.txt
tests/: test_controller.py  test_rate_limits.py  test_strategy.py
xhs_bot/: cli.py  person_detector.py  web_server.py
xhs_bot/web_static/: index.html
