[project]
name = "engagebot"
version = "0.1.0"
description = "Sandbox Engagement Bot (PoC) - mock-only adapter with safe defaults"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sandbox", email = "sandbox@example.com" }
]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "APScheduler>=3.10",
  "tenacity>=8.2",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "ruff>=0.5.0",
  "isort>=5.13",
  "pytest>=8.2",
  "pre-commit>=3.7",
]

[project.scripts]
engage = "engagebot.cli:app"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["engagebot*"]
exclude = ["tests*", "example_data*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
